name:                grasph
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MortimerMcMire315/grasph
license:             GPL-3
license-file:        LICENSE
author:              Seth A. Yoder
maintainer:          seth.a.yoder@gmail.com
copyright:           (c) 2017 Seth A. Yoder
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:     Grasph.Graph
                     , Grasph.ArrayGraph
                     , Grasph.SpecialGraphs
                     , Grasph.Misc.Infinity
                     , Grasph.Algorithm.Dijkstra
                     , Grasph.Algorithm.EdgeColor
                     , Grasph.Algorithm.DFS
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , random >= 1.1
                     , array >= 0.5
  default-language:    Haskell2010

executable graphtest
    main-is:           Main.hs
    hs-source-dirs:    src/
    build-depends:     base >= 4.7
                     , containers >= 0.5
                     , random >= 1.1
    default-language:  Haskell2010

source-repository head
  type:     git
  location: https://github.com/MortimerMcMire315/grasph
